# readmission-prediction-mlops

./: .dockerignore  .env.example  .gitignore  Makefile  README.md  docker-compose.yml  dvc.yaml  params.yaml  pyproject.toml  requirements-api.txt
.github/workflows/: ci.yaml  ci.yml  deploy.yaml  monitor.yml  retrain.yml  train.yaml
api/: main.py  model_loader.py  schemas.py
api/routes/: model_info.py  predict.py
api/tests/: test_api.py
configs/: api_config.yaml  data_config.yaml  model_config.yaml  train_config.yaml
deployment/docker/: Dockerfile.api  Dockerfile.training
deployment/helm/readmission-api/: Chart.yaml  values.yaml
deployment/kubernetes/: api-deployment.yaml  api-ingress.yaml  api-service.yaml  configmap.yaml  mlflow-deployment.yaml  mlflow-service.yaml  namespace.yaml  postgres-deployment.yaml  postgres-service.yaml  retraining-cronjob.yaml  secret.example.yaml
models/: README.md
monitoring/evidently/: README.md
monitoring/grafana/dashboards/: api_dashboard.json
monitoring/prometheus/: prometheus.yml
scripts/: build_docker.sh  deploy_k8s.sh  download_data.py  generate_drift_report.py  register_model.py  run_api_local.sh  run_evaluation.py  run_retraining_flow.py  run_training.py  validate_training_outputs.py
src/readmission/: __init__.py
tests/: test_data_validation.py  test_drift_report.py  test_features.py  test_prediction.py  test_preprocessing.py  test_retraining_flow.py  test_training.py
workflows/: __init__.py  prefect_monitoring_flow.py  prefect_retraining_flow.py  prefect_training_flow.py
(+23 files in other folders)
