[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hospital-readmission-mlops"
version = "0.1.0"
description = "MLOps platform for hospital readmission risk prediction"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Vishnu" }]
dependencies = [
    "evidently>=0.4.39",
    "fastapi>=0.111.0",
    "joblib>=1.4.0",
    "mlflow>=2.13.0",
    "numpy>=1.26.0",
    "pandas>=2.2.0",
    "prometheus-client>=0.20.0",
    "pydantic>=2.7.0",
    "python-dotenv>=1.0.1",
    "pyyaml>=6.0.1",
    "scikit-learn>=1.4.0",
    "uvicorn[standard]>=0.29.0",
    "xgboost>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "dvc>=3.50.0",
    "httpx>=0.27.0",
    "jupyter>=1.0.0",
    "prefect>=2.19.0",
    "pytest>=8.2.0",
    "ruff>=0.4.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests", "api/tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

